<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/singleDressing0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/transparent"
        android:orientation="vertical" >
         <Button
            android:id="@+id/btnCC"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_two"
            android:onClick="btnCCOnClick"
            android:text="@string/powerful"/>
         
        <Button
            android:id="@+id/btnLB"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_two"
            android:onClick="btnLBOnClick"
            android:text="@string/enjoyment"/>
        <Button
            android:id="@+id/btnGM"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_two"
            android:onClick="btnGMOnClick"
            android:text="@string/modern"/>
        <Button
            android:id="@+id/btnXR"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_two"
            android:onClick="btnXROnClick"
            android:text="@string/homecoming"/>
        <Button
            android:id="@+id/btnTX"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_two"
            android:onClick="btnTXOnClick"
            android:text="@string/odyssey"/>
        <Button
            android:id="@+id/btnSG"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_two"
            android:onClick="btnSGOnClick"
            android:text="@string/thief" />
        <!-- 

        <Button
            android:id="@+id/btnGM"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="btnGMOnClick"
            android:text="@string/powerful" 
            android:textSize="@dimen/typeface"/>

        <Button
            android:id="@+id/btnTX"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="btnTXOnClick"
            android:text="@string/enjoyment" 
            android:textSize="@dimen/typeface"/>

        <Button
            android:id="@+id/btnXR"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="btnXROnClick"
            android:text="@string/modern" 
            android:textSize="@dimen/typeface"/>

        <Button
            android:id="@+id/btnCC"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="btnCCOnClick"
            android:text="@string/homecoming" 
            android:textSize="@dimen/typeface"/>

        <Button
            android:id="@+id/btnSG"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="btnSGOnClick"
            android:text="@string/odyssey" 
            android:textSize="@dimen/typeface"/>

        <Button
            android:id="@+id/btnLB"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:onClick="btnLBOnClick"
            android:text="@string/thief" 
            android:textSize="@dimen/typeface"/>
             -->
    </LinearLayout>

    <ListView
        android:id="@+id/sceneListView"
        android:layout_width="60dp"
        android:layout_height="fill_parent"
        android:background="@color/atrous"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#00000000"
        android:dividerHeight="5dp"
        android:fadingEdge="none"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

</LinearLayout>