<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moreRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent" >

    <FrameLayout
        android:id="@+id/drawViewFrameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btnRelative"
        android:background="@color/translucent" >

        <com.doubi.logic.drawView.MoreSceneDrawView
            android:id="@+id/mMoreSceneDrawView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
		<!-- 
        <com.doubi.logic.drawView.MorePropDrawView
            android:id="@+id/mMorePropDrawView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible" />
		-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnMain"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/button_selector"
                android:onClick="btnMainOnclick"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/top" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:onClick="btnSaveOnclick"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:onClick="btnShareOnclick"
                android:text="@string/share" />
        </LinearLayout>
    </FrameLayout>

    <include
        android:id="@+id/moreScene"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        layout="@layout/control_more_scene"
        android:background="@color/translucent"
        android:visibility="invisible" />

    <include
        android:id="@+id/prop"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        layout="@layout/control_more_prop"
        android:background="@color/translucent"
        android:visibility="invisible" />

    <include
        android:id="@+id/pet"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        layout="@layout/control_more_pet"
        android:background="@color/translucent"
        android:visibility="invisible" />

    <include
        android:id="@+id/bubble"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        layout="@layout/control_more_bubble"
        android:background="@color/translucent"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/btnRelative"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/translucent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btnPhoto"
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="btnPhotoOnclick"
                android:src="@drawable/photo" />

            <Button
                android:id="@+id/btnScene"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="btnSceneOnclick"
                android:text="@string/scene" />

            <Button
                android:id="@+id/btnPropMore"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="btnPropMoreOnclick"
                android:text="@string/prop" />

            <Button
                android:id="@+id/btnPet"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="btnPetOnclick"
                android:text="@string/pet" />

            <Button
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="btnTextOnclick"
                android:text="@string/words" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cameraWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/whitetwo"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/button_selector"
            android:src="@drawable/photo" >
        </ImageView>

        <ImageView
            android:id="@+id/photoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@layout/button_album">
        </ImageView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/propDelMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:src="@drawable/cancelselectprop"
        android:text="@string/delete"
        android:visibility="gone" />

</RelativeLayout>